--- a/src/main/resources/com/example/plantwidget_g18_gui/cssSheets.css
+++ b/src/main/resources/com/example/plantwidget_g18_gui/cssSheets.css
@@ -1,89 +1,89 @@
 .buttonLegendary
 {
--fx-background-color : #eaed26;
--fx-background-radius : 30 0 0 30;
+    -fx-background-color: linear-gradient(to right bottom, #eaed26, #949410);
+    -fx-background-radius : 30 0 0 30;
 }
 
 .buttonLegendary:hover
 {
--fx-background-color : #909019;
--fx-background-radius : 30 0 0 30;
+-fx-background-color: linear-gradient(to right bottom, #9a9a22, #949410);
+    -fx-background-radius : 30 0 0 30;
 }
 
 .buttonLegendary:pressed
 {
--fx-background-color : #eaed26;
--fx-background-radius : 30 0 0 30;
+-fx-background-color: linear-gradient(to right bottom, #eaed26, #949410);
+    -fx-background-radius : 30 0 0 30;
 }
 
 .button1
 {
--fx-background-color : #25ee58;
--fx-background-radius : 30 0 0 30;
+    -fx-background-color: linear-gradient(to right bottom, #08f844, #298321);
+    -fx-background-radius : 30 0 0 30;
 }
 
 .button1:hover
 {
--fx-background-color : #166b2c;
--fx-background-radius : 30 0 0 30;
+    -fx-background-color: linear-gradient(to right bottom, #08c935, #298321);
+        -fx-background-radius : 30 0 0 30;
 }
 
 .button1:pressed
 {
--fx-background-color : #25ee58;
--fx-background-radius : 30 0 0 30;
+    -fx-background-color: linear-gradient(to right bottom, #08f844, #298321);
+        -fx-background-radius : 30 0 0 30;
 }
 .buttonSelect
 {
--fx-background-color : #80cd93;
--fx-background-radius : 30 0 0 30;
+-fx-background-color: linear-gradient(to right bottom, #edb0e1, #cdaac6);
+    -fx-background-radius : 30 0 0 30;
 }
 
 .buttonSelect:hover
 {
--fx-background-color : #166b2c;
--fx-background-radius : 30 0 0 30;
+-fx-background-color: linear-gradient(to right bottom, #cdaac6, #edb0e1);
+    -fx-background-radius : 30 0 0 30;
 }
 
 .buttonSelect:pressed
 {
--fx-background-color : #80cd93;
--fx-background-radius : 30 0 0 30;
+-fx-background-color: linear-gradient(to right bottom, #edb0e1, #cdaac6);
+    -fx-background-radius : 30 0 0 30;
 }
 .buttonWater
 {
--fx-background-color : #80cd93;
--fx-background-radius : 0 30 30 0;
+-fx-background-color: linear-gradient(to right bottom, #87cfdd, #3c76d3);
+    -fx-background-radius : 0 30 30 0;
 }
 
 .buttonWater:hover
 {
--fx-background-color : #3373da;
--fx-background-radius : 0 30 30 0;
+-fx-background-color: linear-gradient(to right bottom,  #3373da, #3c76d3);
+    -fx-background-radius : 0 30 30 0;
 }
 
 .buttonWater:pressed
 {
--fx-background-color : #80cd93;
--fx-background-radius : 0 30 30 0;
+-fx-background-color: linear-gradient(to right bottom, #87cfdd, #3c76d3);
+    -fx-background-radius : 0 30 30 0;
 }
 
 .buttonExit
 {
--fx-background-color : #da2929;
--fx-background-radius : 30 0 0 30;
+-fx-background-color: linear-gradient(to right bottom, #da2929, #611111);
+    -fx-background-radius : 30 0 0 30;
 }
 
 .buttonExit:hover
 {
--fx-background-color : #612424;
--fx-background-radius : 30 0 0 30;
+-fx-background-color: linear-gradient(to right bottom, #612424, #611111);
+    -fx-background-radius : 30 0 0 30;
 }
 
 .buttonExit:pressed
 {
--fx-background-color : #da2929;
--fx-background-radius : 30 0 0 30;
+-fx-background-color: linear-gradient(to right bottom, #da2929, #611111);
+    -fx-background-radius : 30 0 0 30;
 }
 
 .anchor-paneBorder {
@@ -179,36 +179,37 @@
 
 .buttonSettings
 {
--fx-background-color :#636864;
--fx-background-radius : 30 0 0 30;
+-fx-background-color: linear-gradient(to right bottom, #8a8a8a, #4a4a4a);
+    -fx-background-radius : 30 0 0 30;
 }
 
 .buttonSettings:hover
 {
--fx-background-color : #505451;
--fx-background-radius :30 0 0 30;
+-fx-background-color: linear-gradient(to right bottom, #4a4a4a, #4a4a4a);
+    -fx-background-radius : 30 0 0 30;
 }
 
 .buttonSettings:pressed
 {
--fx-background-color : #636864;
--fx-background-radius : 30 0 0 30;
+-fx-background-color: linear-gradient(to right bottom, #8a8a8a, #4a4a4a);
+    -fx-background-radius : 30 0 0 30;
 }
 .textFieldGreen {
     -fx-background-color: #92eaa9;
 }
 @font-face {
-    src: url("fonts/PixemonTrialRegular-p7nLK.ttf");
-}
-
-@font-face {
-    src: url("fonts/PixemontrialRegular-x3KqK.otf");
-}
-
-@font-face {
     src: url("fonts/retro_computer_personal_use.ttf");
 }
 .text {
-    fx-font: 20px "Pixemon Trial";
+    -fx-font-family:"Retro Computer";
+}
+.label {
+    -fx-font-family:"Retro Computer";
+}
+.elementToggle {
+    -fx-background-radius :30 30 30 30;
+}
+.gradientTest{
+-fx-background-color: linear-gradient(to right bottom, #858585 , #4e835b);
 }
 
