--- a/src/main/resources/com/example/plantwidget_g18_gui/hello-view.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/hello-view.fxml
@@ -3,6 +3,7 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
@@ -37,7 +38,7 @@
             <Image url="@../../../images/pngtree-cactus-pixel-art-png-image_6581983.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="imagePlantTwo" fitHeight="88.0" fitWidth="111.0" layoutX="229.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imagePlantTwo" fitHeight="88.0" fitWidth="111.0" layoutX="246.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true" visible="false" />
       <ImageView fx:id="imagePlantThree" fitHeight="88.0" fitWidth="111.0" layoutX="439.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="imagePlantFour" fitHeight="88.0" fitWidth="111.0" layoutX="20.0" layoutY="246.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="imagePlantFive" fitHeight="88.0" fitWidth="111.0" layoutX="170.0" layoutY="246.0" pickOnBounds="true" preserveRatio="true" />
@@ -65,7 +66,7 @@
       <JFXButton buttonType="RAISED" layoutX="489.0" layoutY="293.0" onAction="#goTochooseSeedScene" prefHeight="25.0" prefWidth="111.0" ripplerFill="BLACK" styleClass="buttonLegendary" text="Legendary Plants" textFill="WHITE" />
       <JFXButton fx:id="settingsButton" buttonType="RAISED" layoutX="489.0" layoutY="325.0" onAction="#goToSettings" prefHeight="25.0" prefWidth="111.0" ripplerFill="BLACK" styleClass="buttonSettings" text="Settings" textFill="WHITE" />
       <JFXButton fx:id="waterThePlantOne" buttonType="RAISED" layoutX="15.0" layoutY="159.0" onAction="#waterPlantOne" prefHeight="25.0" prefWidth="74.0" ripplerFill="#5d69c6" styleClass="buttonWater" text="Water Plant" />
-      <JFXButton fx:id="selectPlantButton" buttonType="RAISED" layoutX="91.0" layoutY="159.0" onAction="#selectPlant" prefHeight="25.0" prefWidth="74.0" styleClass="buttonSelect" text="Select PLant">
+      <JFXButton fx:id="selectPlantButton" buttonType="RAISED" layoutX="91.0" layoutY="159.0" onAction="#selectPlantOne" prefHeight="25.0" prefWidth="74.0" styleClass="buttonSelect" text="Select PLant">
          <ripplerFill>
             <LinearGradient cycleMethod="REFLECT" endX="1.0" endY="1.0">
                <stops>
@@ -89,6 +90,33 @@
          </ripplerFill>
       </JFXButton>
       <JFXButton fx:id="exitButton" buttonType="RAISED" layoutX="488.0" layoutY="357.0" onAction="#closeProgram" prefHeight="25.0" prefWidth="111.0" ripplerFill="BLACK" styleClass="buttonExit" text="Exit Application" textFill="WHITE" />
+      <ProgressBar fx:id="plantWaterBarTwo" layoutX="229.0" layoutY="124.0" prefHeight="14.0" prefWidth="143.0" progress="0.78" visible="false" />
+      <ProgressBar fx:id="plantHealthBarTwo" layoutX="229.0" layoutY="138.0" prefHeight="14.0" prefWidth="143.0" progress="0.53" styleClass="progressBarHealth" stylesheets="@cssSheets.css" visible="false" />
+      <JFXButton fx:id="waterPlantTwo" buttonType="RAISED" layoutX="225.0" layoutY="158.0" onAction="#waterPlantTwo" prefHeight="25.0" prefWidth="74.0" ripplerFill="#5d69c6" styleClass="buttonWater" text="Water Plant" visible="false" />
+      <JFXButton fx:id="selectPlantTwo" buttonType="RAISED" layoutX="301.0" layoutY="158.0" onAction="#selectPlantTwo" prefHeight="25.0" prefWidth="74.0" styleClass="buttonSelect" text="Select PLant" visible="false">
+         <ripplerFill>
+            <LinearGradient cycleMethod="REFLECT" endX="1.0" endY="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="0.9176470637321472" green="0.9215686321258545" blue="0.9176470637321472" />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.010067114093959731">
+                     <color>
+                        <Color red="0.501960813999176" green="0.8039215803146362" blue="0.5764706134796143" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.9210526347160339" green="0.48184698820114136" blue="0.8771320581436157" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </ripplerFill>
+      </JFXButton>
+      <Label fx:id="plantLeveltwo" layoutX="286.0" layoutY="17.0" visible="false" />
    </children>
    <effect>
       <Glow />
