--- a/src/main/resources/com/example/plantwidget_g18_gui/PlantInfoGUI.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/PlantInfoGUI.fxml
@@ -24,7 +24,7 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-      <Button fx:id="waterThePlantOne" layoutX="224.0" layoutY="406.0" mnemonicParsing="false" onAction="#waterPlantOne" prefHeight="38.0" prefWidth="137.0" styleClass="buttonWaterMiddle" stylesheets="@cssSheets.css" text="Water the plant" textFill="WHITE">
+      <Button fx:id="waterThePlantOne" layoutX="224.0" layoutY="406.0" mnemonicParsing="false" onAction="#waterPlantOne" prefHeight="38.0" prefWidth="137.0" styleClass="buttonWaterMiddle" stylesheets="@cssSheets.css" text="Water the plant" textFill="WHITE" visible="false">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
@@ -37,8 +37,8 @@
             <Font name="System Bold" size="12.0" />
          </font></Button>
       <TextArea layoutX="56.0" layoutY="36.0" prefHeight="38.0" prefWidth="266.0" promptText="Plant-name, species, age" stylesheets="@cssSheets.css" />
-      <ProgressBar fx:id="plantWaterBarOne" layoutX="480.0" layoutY="212.0" prefHeight="23.0" prefWidth="175.0" progress="0.78" />
-      <ProgressBar fx:id="plantHealthBarOne" layoutX="479.0" layoutY="274.0" prefHeight="23.0" prefWidth="175.0" progress="0.53" />
+      <ProgressBar fx:id="waterBarInSelectPlantScene" layoutX="480.0" layoutY="212.0" prefHeight="23.0" prefWidth="175.0" progress="0.78" />
+      <ProgressBar fx:id="healthBarInSelectPlantScene" layoutX="479.0" layoutY="274.0" prefHeight="23.0" prefWidth="175.0" progress="0.53" />
       <Text layoutX="499.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Water Level" wrappingWidth="137.0" />
       <Text layoutX="498.0" layoutY="270.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Health Level" wrappingWidth="137.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#92eaa9" height="239.0" layoutX="56.0" layoutY="114.0" stroke="BLACK" strokeType="INSIDE" width="266.0" />
@@ -69,6 +69,11 @@
          </effect>
          <font>
             <Font name="System Bold Italic" size="12.0" />
+         </font>
+      </Button>
+      <Button fx:id="waterThePlantTwo" layoutX="224.0" layoutY="406.0" mnemonicParsing="false" onAction="#waterPlantTwo" prefHeight="38.0" prefWidth="137.0" styleClass="buttonWaterMiddle" stylesheets="@cssSheets.css" text="Water the plant" textFill="WHITE" visible="false">
+         <font>
+            <Font name="System Bold" size="12.0" />
          </font>
       </Button>
 
