--- a/src/main/resources/com/example/plantwidget_g18_gui/PlantInfoGUI.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/PlantInfoGUI.fxml
@@ -32,7 +32,7 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-      <Button fx:id="skipDayButton1" layoutX="498.0" layoutY="406.0" mnemonicParsing="false" onAction="#skipDay1" prefHeight="38.0" prefWidth="137.0" styleClass="buttonSkipDay" stylesheets="@cssSheets.css" text="Skip day" textFill="WHITE">
+      <Button fx:id="skipDayButton1" layoutX="498.0" layoutY="406.0" mnemonicParsing="false" onAction="#skipDay1" prefHeight="38.0" prefWidth="137.0" styleClass="buttonSkipDay" stylesheets="@cssSheets.css" text="Skip day" textFill="WHITE" visible="false">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
@@ -72,6 +72,21 @@
          </font>
       </Button>
       <Button fx:id="waterThePlantTwo" layoutX="224.0" layoutY="406.0" mnemonicParsing="false" onAction="#waterPlantTwo" prefHeight="38.0" prefWidth="137.0" styleClass="buttonWaterMiddle" stylesheets="@cssSheets.css" text="Water the plant" textFill="WHITE" visible="false">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
+      <Button fx:id="skipDayButton2" layoutX="498.0" layoutY="406.0" mnemonicParsing="false" onAction="#skipDay2" prefHeight="38.0" prefWidth="137.0" styleClass="buttonSkipDay" stylesheets="@cssSheets.css" text="Skip day" textFill="WHITE" visible="false">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
+      <Button fx:id="skipDayButton3" layoutX="498.0" layoutY="406.0" mnemonicParsing="false" onAction="#skipDay3" prefHeight="38.0" prefWidth="137.0" styleClass="buttonSkipDay" stylesheets="@cssSheets.css" text="Skip day" textFill="WHITE" visible="false">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
+      <Button fx:id="waterThePlantThree" layoutX="224.0" layoutY="406.0" mnemonicParsing="false" onAction="#waterPlantTwo" prefHeight="38.0" prefWidth="137.0" styleClass="buttonWaterMiddle" stylesheets="@cssSheets.css" text="Water the plant" textFill="WHITE" visible="false">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
