Added the picture and functionality of adding a third plant to the main menu and it works to choose it skip day, water etc from what i have tested.

--- a/src/main/resources/com/example/plantwidget_g18_gui/PlantInfoGUI.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/PlantInfoGUI.fxml
@@ -86,7 +86,7 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="waterThePlantThree" layoutX="224.0" layoutY="406.0" mnemonicParsing="false" onAction="#waterPlantTwo" prefHeight="38.0" prefWidth="137.0" styleClass="buttonWaterMiddle" stylesheets="@cssSheets.css" text="Water the plant" textFill="WHITE" visible="false">
+      <Button fx:id="waterThePlantThree" layoutX="224.0" layoutY="406.0" mnemonicParsing="false" onAction="#waterPlantThree" prefHeight="38.0" prefWidth="137.0" styleClass="buttonWaterMiddle" stylesheets="@cssSheets.css" text="Water the plant" textFill="WHITE" visible="false">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
