--- a/src/main/resources/com/example/plantwidget_g18_gui/PlantInfoGUI.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/PlantInfoGUI.fxml
@@ -28,7 +28,7 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-      <Button fx:id="placeOnDesk1" layoutX="361.0" layoutY="406.0" mnemonicParsing="false" onAction="#placeOnDesk1" prefHeight="38.0" prefWidth="137.0" styleClass="buttonSelectMiddle" stylesheets="@cssSheets.css" text="Place on desktop" textFill="WHITE">
+      <Button fx:id="placeOnDesk1" layoutX="361.0" layoutY="406.0" mnemonicParsing="false" onAction="#placeOnDesk1" prefHeight="38.0" prefWidth="137.0" styleClass="buttonSelectMiddle" stylesheets="@cssSheets.css" text="Place on desktop" textFill="WHITE" visible="false">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
@@ -87,6 +87,16 @@
          </font>
       </Button>
       <Button fx:id="waterThePlantThree" layoutX="224.0" layoutY="406.0" mnemonicParsing="false" onAction="#waterPlantThree" prefHeight="38.0" prefWidth="137.0" styleClass="buttonWaterMiddle" stylesheets="@cssSheets.css" text="Water the plant" textFill="WHITE" visible="false">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
+      <Button fx:id="placeOnDesk2" layoutX="361.0" layoutY="407.0" mnemonicParsing="false" onAction="#placeOnDesk1" prefHeight="38.0" prefWidth="137.0" styleClass="buttonSelectMiddle" stylesheets="@cssSheets.css" text="Place on desktop" textFill="WHITE" visible="false">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
+      <Button fx:id="placeOnDesk3" layoutX="361.0" layoutY="407.0" mnemonicParsing="false" onAction="#placeOnDesk1" prefHeight="38.0" prefWidth="137.0" styleClass="buttonSelectMiddle" stylesheets="@cssSheets.css" text="Place on desktop" textFill="WHITE" visible="false">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
