--- a/src/main/resources/com/example/plantwidget_g18_gui/widget-view.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/widget-view.fxml
@@ -4,24 +4,18 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="181.0" prefWidth="152.0" style="-fx-background-color: #92eaa9;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.plantwidget_g18_gui.HelloController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#92eaa9" height="181.0" stroke="#92eaa9" strokeType="INSIDE" width="152.0" />
-      <ImageView fx:id="imagePlantOne" fitHeight="88.0" fitWidth="128.0" layoutX="29.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../images/pngtree-cactus-pixel-art-png-image_6581983.png" />
-         </image>
-      </ImageView>
-      <ProgressBar fx:id="plantWaterBarOne" layoutX="5.0" layoutY="111.0" prefHeight="14.0" prefWidth="143.0" progress="0.78" />
-      <ProgressBar fx:id="plantHealthBarOne" layoutX="5.0" layoutY="125.0" prefHeight="14.0" prefWidth="143.0" progress="0.53" styleClass="progressBarHealth" stylesheets="@cssSheets.css" />
-      <Button fx:id="waterThePlantOne" layoutX="1.0" layoutY="145.0" mnemonicParsing="false" onAction="#waterPlantOne" prefHeight="25.0" prefWidth="74.0" styleClass="buttonWater" stylesheets="@cssSheets.css" text="Water Plant">
+      <ImageView fx:id="imagePlantOne" fitHeight="88.0" fitWidth="128.0" layoutX="29.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true" />
+      <ProgressBar fx:id="waterBarInWidgetScene" layoutX="5.0" layoutY="111.0" prefHeight="14.0" prefWidth="143.0" progress="0.78" />
+      <ProgressBar fx:id="healthBarInWidgetScene" layoutX="5.0" layoutY="125.0" prefHeight="14.0" prefWidth="143.0" progress="0.53" styleClass="progressBarHealth" stylesheets="@cssSheets.css" />
+      <Button fx:id="waterThePlantOne" layoutX="1.0" layoutY="145.0" mnemonicParsing="false" onAction="#waterPlantOne" prefHeight="25.0" prefWidth="74.0" styleClass="buttonWater" stylesheets="@cssSheets.css" text="Water Plant" visible="false">
          <font>
             <Font size="11.0" />
          </font>
@@ -36,5 +30,15 @@
             <Insets />
          </opaqueInsets>
       </TextField>
+      <Button fx:id="waterThePlantTwo" layoutX="1.0" layoutY="145.0" mnemonicParsing="false" onAction="#waterPlantTwo" prefHeight="25.0" prefWidth="74.0" styleClass="buttonWater" stylesheets="@cssSheets.css" text="Water Plant" visible="false">
+         <font>
+            <Font size="11.0" />
+         </font>
+      </Button>
+      <Button fx:id="waterThePlantOne11" layoutX="1.0" layoutY="145.0" mnemonicParsing="false" onAction="#waterPlantThree" prefHeight="25.0" prefWidth="74.0" styleClass="buttonWater" stylesheets="@cssSheets.css" text="Water Plant" visible="false">
+         <font>
+            <Font size="11.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
