--- a/src/main/resources/com/example/plantwidget_g18_gui/PlantInfoGUI.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/PlantInfoGUI.fxml
@@ -2,9 +2,8 @@
 
 <?import javafx.scene.AmbientLight?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.Glow?>
 <?import javafx.scene.image.Image?>
@@ -12,6 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.paint.Color?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -19,7 +19,9 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="489.0" prefWidth="721.0" style="-fx-background-color: #4e835b;" styleClass="anchor-paneBorder" stylesheets="@cssSheets.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.plantwidget_g18_gui.HelloController">
    <children>
       <Pane layoutY="-169.0" prefHeight="385.0" prefWidth="360.0" rotate="38.7" style="-fx-background-color: #61523a; -fx-background-radius: 60;" />
-      <Pane layoutX="467.0" layoutY="135.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #92eaa9;" styleClass="anchor-paneBorder" stylesheets="@cssSheets.css" />
+      <Pane layoutX="435.0" layoutY="110.0" prefHeight="239.0" prefWidth="232.0" style="-fx-background-color: #92eaa9;" styleClass="anchor-paneBorder" stylesheets="@cssSheets.css" />
+      <Label fx:id="speciesNameInSelectPlantScene" layoutX="483.0" layoutY="190.0" prefHeight="17.0" prefWidth="104.0" text="asd" />
+      <Label fx:id="plantNameInSelectPlantScene" layoutX="484.0" layoutY="145.0" prefHeight="17.0" prefWidth="149.0" text="asd" textAlignment="CENTER" />
       <Button fx:id="backButton" layoutX="87.0" layoutY="406.0" mnemonicParsing="false" onAction="#goBackToLibrary" prefHeight="38.0" prefWidth="137.0" styleClass="button1" stylesheets="@cssSheets.css" text="Back to library" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
@@ -36,29 +38,13 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-      <TextArea layoutX="56.0" layoutY="36.0" prefHeight="38.0" prefWidth="266.0" promptText="Plant-name, species, age" stylesheets="@cssSheets.css" />
-      <ProgressBar fx:id="waterBarInSelectPlantScene" layoutX="480.0" layoutY="212.0" prefHeight="23.0" prefWidth="175.0" progress="0.78" />
-      <ProgressBar fx:id="healthBarInSelectPlantScene" layoutX="479.0" layoutY="274.0" prefHeight="23.0" prefWidth="175.0" progress="0.53" />
-      <Text layoutX="499.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Water Level" wrappingWidth="137.0" />
-      <Text layoutX="498.0" layoutY="270.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Health Level" wrappingWidth="137.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#92eaa9" height="239.0" layoutX="56.0" layoutY="114.0" stroke="BLACK" strokeType="INSIDE" width="266.0" />
-      <TextField fx:id="levelPlantOne" layoutX="56.0" layoutY="36.0" prefHeight="38.0" prefWidth="266.0" style="-fx-background-color: #61523a; -fx-border-radius: 60;" />
-      <ImageView fitHeight="239.0" fitWidth="266.0" layoutX="70.0" layoutY="115.0" pickOnBounds="true" preserveRatio="true" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#92eaa9" height="239.0" layoutX="56.0" layoutY="115.0" stroke="BLACK" strokeType="INSIDE" width="266.0" />
+      <ImageView fitHeight="239.0" fitWidth="266.0" layoutX="56.0" layoutY="116.0" pickOnBounds="true" preserveRatio="true" />
       <AmbientLight layoutX="383.0" layoutY="234.0" lightOn="true">
          <color>
             <Color red="0.501960813999176" green="1.0" />
          </color>
       </AmbientLight>
-      <ImageView fitHeight="38.0" fitWidth="46.0" layoutX="605.0" layoutY="182.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../images/water.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="26.0" fitWidth="38.0" layoutX="615.0" layoutY="244.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../images/health.png" />
-         </image>
-      </ImageView>
       <Button fx:id="exitButton1" layoutX="688.0" layoutY="2.0" mnemonicParsing="false" onAction="#closeProgram" prefHeight="15.0" prefWidth="33.0" styleClass="buttonExit" stylesheets="@cssSheets.css" text="X" textOverrun="CLIP">
          <effect>
             <DropShadow blurType="GAUSSIAN">
@@ -101,6 +87,32 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
+      <ProgressBar fx:id="waterBarInSelectPlantScene" layoutX="465.0" layoutY="253.0" prefHeight="23.0" prefWidth="175.0" progress="0.78" />
+      <ProgressBar fx:id="healthBarInSelectPlantScene" layoutX="464.0" layoutY="315.0" prefHeight="23.0" prefWidth="175.0" progress="0.53" />
+      <Text layoutX="484.0" layoutY="249.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Water Level" wrappingWidth="137.0" />
+      <Text layoutX="483.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Health Level" wrappingWidth="137.0" />
+      <ImageView fitHeight="38.0" fitWidth="46.0" layoutX="590.0" layoutY="223.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/water.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="26.0" fitWidth="38.0" layoutX="600.0" layoutY="285.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/health.png" />
+         </image>
+      </ImageView>
+      <Line endX="110.163330078125" fill="#61523a" layoutX="550.0" layoutY="169.0" startX="-108.0" stroke="#393021" strokeType="OUTSIDE" />
+      <Line endX="109.0" layoutX="551.0" layoutY="215.0" startX="-109.0" stroke="#393021" strokeType="OUTSIDE" />
+      <Label layoutX="528.0" layoutY="117.0" text="NAME:">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="522.0" layoutY="169.0" prefHeight="21.0" prefWidth="61.0" text="SPECIES:">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
 
    </children>
    <effect>
