--- a/src/main/resources/com/example/plantwidget_g18_gui/PlantInfoGUI.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/PlantInfoGUI.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.AmbientLight?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -113,6 +114,7 @@
             <Font size="15.0" />
          </font>
       </Label>
+      <JFXButton fx:id="deletePlantButton" buttonType="RAISED" layoutX="288.0" layoutY="116.0" onAction="#deletePlant1" prefHeight="25.0" prefWidth="33.0" ripplerFill="#463a3a" styleClass="buttonDiscard" stylesheets="@cssSheets.css" text="´" />
 
    </children>
    <effect>
