--- a/src/main/resources/com/example/plantwidget_g18_gui/cssSheets.css
+++ b/src/main/resources/com/example/plantwidget_g18_gui/cssSheets.css
@@ -67,6 +67,23 @@
 -fx-background-color: linear-gradient(to right bottom, #87cfdd, #3c76d3);
     -fx-background-radius : 0 30 30 0;
 }
+.buttonWaterCenter
+{
+-fx-background-color: linear-gradient(to right bottom, #87cfdd, #3c76d3);
+    -fx-background-radius : 0 0 0 0;
+}
+
+.buttonWaterCenter:hover
+{
+-fx-background-color: linear-gradient(to right bottom,  #3373da, #3c76d3);
+    -fx-background-radius : 0 0 0 0;
+}
+
+.buttonWaterCenter:pressed
+{
+-fx-background-color: linear-gradient(to right bottom, #87cfdd, #3c76d3);
+    -fx-background-radius : 0 0 0 0;
+}
 
 .buttonExit
 {
@@ -84,6 +101,21 @@
 {
 -fx-background-color: linear-gradient(to right bottom, #da2929, #611111);
     -fx-background-radius : 30 0 0 30;
+}
+.buttonDiscard
+{
+-fx-background-color: linear-gradient(to right bottom, #858585 , #4e835b);    -fx-background-radius : 0 0 0 30;
+}
+
+.buttonDiscard:hover
+{
+-fx-background-color: linear-gradient(to right bottom, #612424, #611111);
+    -fx-background-radius : 0 0 0 30;
+}
+
+.buttonDiscard:pressed
+{
+-fx-background-color: linear-gradient(to right bottom, #858585 , #4e835b);    -fx-background-radius : 0 0 0 30;
 }
 
 .anchor-paneBorder {
