Tweaks and design on LegendaryMenu

--- a/src/main/resources/com/example/plantwidget_g18_gui/LegendaryMenu.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/LegendaryMenu.fxml
@@ -1,17 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.CubicCurve?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #4e835b;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.plantwidget_g18_gui.HelloController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #61523a;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.plantwidget_g18_gui.HelloController">
    <children>
-      <ScrollPane fx:id="legendaryScrollPane" hbarPolicy="NEVER" layoutY="72.0" prefHeight="328.0" prefWidth="600.0">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="400.0" stroke="TRANSPARENT" strokeType="INSIDE" width="600.0">
+         <fill>
+            <LinearGradient endX="1.0" endY="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="0.6973684430122375" green="0.6460343599319458" blue="0.3551413118839264" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.5657894611358643" green="0.5242283940315247" blue="0.2540813982486725" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </fill>
+      </Rectangle>
+      <CubicCurve controlX1="-8.20709228515625" controlX2="422.7599182128906" controlY1="69.20578002929688" controlY2="489.6259765625" endX="590.7599487304688" endY="-22.3740234375" fill="#796a4b" layoutX="10.0" layoutY="10.0" startX="590.0000610351562" startY="390.0" stroke="BLACK" />
+      <CubicCurve controlX1="-8.20709228515625" controlX2="197.8313446044922" controlY1="69.20578002929688" controlY2="365.6242980957031" endX="547.8313598632812" endY="-37.16864776611328" fill="#796a4b" startX="-100.16865539550781" startY="83.6259765625" stroke="BLACK" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="72.0" stroke="TRANSPARENT" strokeType="INSIDE" width="600.0">
+         <fill>
+            <LinearGradient endX="1.0" endY="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="0.5803921818733215" green="0.5803921818733215" blue="0.062745101749897" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.4463694095611572" green="0.7368420958518982" blue="0.2899610102176666" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </fill>
+      </Rectangle>
+      <ScrollPane fx:id="legendaryScrollPane" hbarPolicy="NEVER" layoutY="72.0" opacity="0.0" prefHeight="328.0" prefWidth="600.0">
          <content>
             <GridPane fx:id="legendaryGridPane" alignment="TOP_CENTER" maxWidth="-Infinity" prefWidth="590.0" vgap="50.0">
               <columnConstraints>
@@ -26,15 +69,28 @@
             </GridPane>
          </content>
       </ScrollPane>
-      <Button layoutX="479.0" layoutY="15.0" mnemonicParsing="false" onAction="#goBackToLibrary" text="Go Back">
-         <font>
-            <Font name="Verdana Pro Cond Black" size="21.0" />
-         </font>
-      </Button>
       <Label layoutX="182.0" layoutY="16.0" text="Legendary Plants">
          <font>
             <Font name="Verdana Pro Cond Black" size="29.0" />
          </font>
       </Label>
+      <JFXButton buttonType="RAISED" layoutX="505.0" layoutY="24.0" onAction="#goBackToLibrary" styleClass="button1" stylesheets="@cssSheets.css" text="Back to Library">
+         <ripplerFill>
+            <LinearGradient endX="1.0" endY="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="0.6973684430122375" green="0.6460343599319458" blue="0.3551413118839264" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.5789473652839661" green="0.536777138710022" blue="0.2626705765724182" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </ripplerFill>
+      </JFXButton>
    </children>
 </AnchorPane>
